--- a/.gitconfig
+++ b/.gitconfig
@@ -1,30 +1,49 @@
 [credential]
 	helper = cache --timeout=3600
+
 [core]
 	editor = vim
 	autocrlf = input
+
 [push]
 	default = simple
+
 [alias]
 	gloga = log --graph --oneline --decorate --all
 	glog = log --graph --oneline --decorate
 	co = checkout
 	ci = commit
 	st = status
-	showfiles = diff-tree --name-only -r
+	glogg = log --graph --abbrev-commit --decorate --all --format=format:\"%C(bold blue)%h%C(reset) - %C(bold cyan)%aD%C(dim white) - %an%C(reset) %C(bold green)(%ar)%C(reset)%C(bold yellow)%d%C(reset)%n %C(white)%s%C(reset)\"
+	pushf = push --force-with-lease
 
-[diff]
-    tool = kdiff3
- 
-[merge]
-    tool = kdiff3
- 
-[mergetool "kdiff3"]
-    keepBackup = false
-    trustExitCode = false
- 
-[difftool "kdiff3"]
-    keepBackup = false
-    trustExitCode = false
 [pull]
 	rebase = true
+	
+[rerere]
+	enabled = true
+
+[diff]
+    tool = meld
+    mnemonicprefix = true
+	renames = true
+ 
+[merge]
+    tool = meld
+
+[mergetool]
+	prompt = false
+	keepBackup = false
+
+[mergetool "meld"]
+    trustExitCode = true
+    cmd = meld "$LOCAL" "$MERGED" "$REMOTE" --output "$MERGED"
+
+[difftool]
+    prompt = false
+    keepBackup = false
+
+[difftool "meld"]
+    trustExitCode = true
+
+
